--- a/package.json
+++ b/package.json
@@ -14,21 +14,25 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
-    "@react-three/fiber": "^9.4.2",
+    "@react-three/fiber": "^9.5.0",
     "@react-three/postprocessing": "^3.0.4",
     "@tiptap/extension-image": "^3.10.7",
     "@tiptap/extension-link": "^3.10.7",
     "@tiptap/extension-placeholder": "^3.10.7",
     "@tiptap/react": "^3.10.7",
     "@tiptap/starter-kit": "^3.10.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "gsap": "^3.14.2",
+    "lucide-react": "^0.562.0",
     "next": "16.0.3",
     "postprocessing": "^6.38.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "swiper": "^12.0.3",
-    "three": "^0.182.0"
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.22",
@@ -36,6 +40,7 @@
     "eslint-config-next": "16.0.3",
     "postcss": "^8.5.6",
     "prisma": "^6.19.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0"
   }
 }
