--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dotenv": "^17.2.3",
     "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
-    "next": "16.0.3",
+    "next": "^16.1.1",
     "postprocessing": "^6.38.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
